Added gui usage instructions.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@ it will pass what you have written to the interpreter through its expression
 method. The choise of the name "expression" might seem a little strange, but 
 that will be made clear later on. The result of the interpretation will be 
 presented in the rightmost field. Lets make a dummy interpreter that returns 
-0, 1, 2,... no matter the input, just to test the calculator.
+0, 1, 2, ... no matter the input, just to test the calculator. Write an 
+expression in the left field, click calculate (or press enter) and watch the 
+output in the right field increment.
     </p>
     <form id="dummy"></form>
     <script>
