--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ of how it works. I will also build a simple calculator to make the interpreter
 interactive. The calculator will look something like this: 
     </p>
     <script>
-function Calculator(interpreter, formElement) {
+function Calculator(interpreter, formElement, name) {
+  this.name = name;
   this.interpreter = interpreter;
   this.input = document.createElement("input");
   this.output = document.createElement("input");
@@ -54,7 +55,7 @@ function Calculator(interpreter, formElement) {
 
 Calculator.prototype.handleEvent = function() {
   var userInput = this.input.value;
-  var result = this.interpreter.expression(userInput);
+  var result = this.interpreter[this.name](userInput);
   this.output.value = result;
   return false;
 };
@@ -71,7 +72,7 @@ describe("The calculator", function() {
     
     spyOn(interpreter, "expression").and.returnValue("the result");
     var form = document.createElement("form");
-    var calculator = new Calculator(interpreter, form);
+    var calculator = new Calculator(interpreter, form, "expression");
     calculator.input.value = "user input";
     
     var submitEvent = new Event("submit");
@@ -128,7 +129,7 @@ var dummyInterpreter = {
 };
 
 var dummyForm = document.getElementById("dummy");
-var dummyCalculator = new Calculator(dummyInterpreter, dummyForm);
+var dummyCalculator = new Calculator(dummyInterpreter, dummyForm, "expression");
 
 describe("The dummy calculator", function() {
   it("doesn't throw errors when submited", function() {
@@ -162,7 +163,7 @@ var dummyInterpreter = {
 };
 
 var dummyForm = document.getElementById("dummy");
-new Calculator(dummyInterpreter, dummyForm);
+new Calculator(dummyInterpreter, dummyForm, "expression");
     </pre>
     <h2>
 Terminals and capturing groups
@@ -219,7 +220,7 @@ surounding spaces.
     </p>
     <form id="number"></form>
     <script>
-var numberCalc = new Calculator(interpreter, document.getElementById("number"));
+var numberCalc = new Calculator(interpreter, document.getElementById("number"), "expression");
 describe("The number calculator", function() {
   it("computes", function() {
     numberCalc.input.value = "1";
