I made a chapter about using sequences to define addition.

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ describe("The number calculator", function() {
       numberCalc.handleEvent();
     }).not.toThrow();
     
-    expect(numberCalc.input.value).toBe("1");
+    expect(numberCalc.output.value).toBe("1");
     numberCalc.input.value = "";
     numberCalc.output.value = "";
   });
@@ -303,6 +303,130 @@ doesn't match, and redo it for all the interpretations corresponding to each
 possible last letter until the last letter matches. Firstly then, anything is 
 executed. Since nothing was executed for the wrong interpretations, they will 
 leave no side effects. Please don't make such a language.
+    </p>
+    <h2>
+Sequences
+    </h2>
+    <p>
+So far, all we have done could easily be accomplished with the 
+Number constructor. Now I will show how the sequencing feature of Semantics! 
+may be used to do some actuall computations, by giving our interpreter the 
+ability to add two numbers.
+    </p>
+    <script>
+interpreter.plusSign = factory.terminal(/(\+)/, function() {});
+
+interpreter.add = factory.nonTerminalSequence("number", "plusSign", "number"
+, function(number1, plusSign, number2) {
+  return number1+number2;
+});
+
+describe("interpreter.add", function() {
+  it("can add two numbers", function() {
+    expect(interpreter.add("1+2")).toBe(3);
+  });
+  
+});
+
+    </script>
+    <pre>
+interpreter.plusSign = factory.terminal(/(\+)/, function() {});
+
+interpreter.add = factory.nonTerminalSequence("number", "plusSign", "number"
+, function(number1, plusSign, number2) {
+  return number1+number2;
+});
+    </pre>
+    <p>
+Before we dive into the code, here is an calculator connected to the add method. 
+Remember that the calculator calls the add method with the string content of the 
+left input and prints the result of the add method to the right input. Indeed, 
+all methods produced by InterpreterMethodFactory should be called with a string 
+to parse. Try adding two numbers, e. g. 1+2.
+    </p>
+    <form id="add"></form>
+    <script>
+var addCalc = new Calculator(interpreter, document.getElementById("add"), "add");
+describe("The add calculator", function() {
+  it("computes", function() {
+    addCalc.input.value = "1+2";
+    expect(function() {
+      addCalc.handleEvent();
+    }).not.toThrow();
+    
+    expect(addCalc.output.value).toBe("3");
+    addCalc.input.value = "";
+    addCalc.output.value = "";
+  });
+});
+    </script>
+    <p>
+First we make a terminal that just matches a plus-sign without actually doing 
+anything with it. Hence the empty function in its definition. That might seem 
+unnecessary, but to match an addition we will have to match a plus-sign, even 
+if we don't explicitly with it. Rather, the plus sign will be used to determine 
+the meaning of the numbers around it: they should be added.
+    </p>
+    <p>
+I agree that this is a rather awkvard way of doing it. I would rather be able 
+to write:
+    </p>
+    <pre>
+interpreter.add = factory.nonTerminalSequence("number", /\+/, "number"
+, function(number1, number2) {
+  return number1+number2;
+});
+    </pre>
+    <p>
+It's on my todo list.
+    </p>
+    <p>
+The nonTerminalSequence method accepts one or more strings and one function. 
+The strings are names of other parsing methods on the interpreter object. When 
+the method, add in this case, is called it will call the named methods and 
+remember their results. It then calls the function with the results as 
+arguments. Informally it works like this:
+    </p>
+    <pre>
+interpreter.add(string) + (number1 -> result1 + plusSign + number2 -> result2) +
++ magic -> interpreter.add(result1, plusResult, result2)
+    </pre>
+    <p>
+More formaly it works like this:
+    </p>
+    <pre>
+InterpreterMethodFactory.prototype
+.nonTerminalSequence = function(methodName1, methodName2, ..., callback) {
+  return function(text) {
+    // text is split into text1, text2, ... according to the syntax of 
+    // this[methodName1], this[methodName2], ...
+    var results = [this[methodName1](text1), this[methodName2](text2), ...];
+    callback.apply(this, results);
+  };
+  
+};
+    </pre>
+    <p>
+The text is split by letting methodName1 parsing the text, method2 parsing the 
+rest of the text and so on. There can be nothing "between" the text that the 
+methods parses, they only consider a match at the beginning of the text they 
+get.
+    </p>
+    <p>
+There is an important difference between when the methods are called "from the 
+outside" and when they are called internaly, e. g. as a part of a
+nonTerminalSequence. When they are called from the outside they don't accept 
+any "trailing code". Even if the begining of the text matches, the interpreter 
+will throw an error if the end of the text can't be parsed. When a parser 
+method is called internally, on the other hand, it accepts that it only can 
+match the beginning of the text that it is passed.
+    </p>
+    <p>
+The reason for this slightly dramatic behavior is that the methods produced 
+by Semantics! generally has a return value, so there is no room for a match 
+result. Furthermore I can't think of a use case where it is better to use 
+Sematics! for matching than regular expressions. But if there is a popular 
+demand for a matching version, I will consider writing it.
     </p>
   </body>
 </html>
